--- a/components/tiptap-ui-primitive/dropdown-menu/dropdown-menu.scss
+++ b/components/tiptap-ui-primitive/dropdown-menu/dropdown-menu.scss
@@ -29,6 +29,7 @@
   max-height: var(--radix-dropdown-menu-content-available-height);
   overflow-x: hidden;
   overflow-y: auto;
+  scrollbar-gutter: stable;
   border-radius: calc(var(--padding) + var(--tt-radius-lg));
   padding: 0.375rem;
   background-color: var(--tt-dropdown-menu-bg-color);
